<resources>
    <string name="app_name">NMedia</string>
    <string name="logo_name">NMedia</string>
    <string name="avatar_description">avatar description</string>
    <string name="postAuthor">Netology. Internet-profession university</string>
    <string name="date">6 april at 11:13 PM</string>
    <string name="URL">https://netology.ru/</string>
    <string name="loremIpsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In iaculis pharetra nunc consequat fermentum. Nam pretium aliquet erat sit amet ullamcorper. Mauris semper neque a urna rhoncus, pulvinar rhoncus sem interdum. Nullam nibh magna, fringilla eget velit et, laoreet viverra ex. Morbi tincidunt mauris non accumsan rutrum. Quisque sagittis iaculis rutrum. Aliquam in eros in massa scelerisque tincidunt eu in ligula. Ut tristique mi nec nisl pulvinar, eleifend tincidunt lacus hendrerit. Sed interdum malesuada nulla, non rutrum velit imperdiet vel. Donec quam ex, sagittis quis vestibulum sit amet, tincidunt quis augue.</string>
    <string name="repostButton">repostButton</string>
    <string name="options">options</string>
    <string name="likebutton">likeButton</string>
    <string name="viewcountpicture">viewCountPicture</string>
    <string name="remove">Remove</string>
    <string name="enter_text">Enter text...</string>
    <string name="menu_edit">Edit</string>
    <string name="edit_message">Edit Message</string>
    <string name="chooser_share_post">Share post</string>
    <string name="description_post_save">Save</string>
    <string name="add_post">Add Post</string>
</resources>