<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:padding="16dp">

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:contentDescription="@string/avatar_description"
        android:src="@drawable/post_avatar_drawable"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/authorName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:ellipsize="end"
        android:fontFamily="@font/montserrat_alternates"
        android:singleLine="true"
        android:text="@string/postAuthor"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@id/postDate"
        app:layout_constraintEnd_toStartOf="@id/options"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toTopOf="@id/avatar"
        app:layout_constraintVertical_chainStyle="spread" />

    <TextView
        android:id="@+id/postDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:fontFamily="@font/montserrat_alternates"
        android:singleLine="true"
        android:text="@string/date"
        android:textColor="@color/background"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@id/avatar"
        app:layout_constraintEnd_toEndOf="@id/authorName"
        app:layout_constraintStart_toStartOf="@id/authorName"
        app:layout_constraintTop_toBottomOf="@id/authorName" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/options"
        style="@style/Widget.AppTheme.Options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:contentDescription="@string/options"
        app:iconGravity="end"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/headerBarrier"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="avatar,postDate,options" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/likeButton"
        style="@style/Widget.AppTheme.LikeCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkable="true"
        app:icon="@drawable/ic_like_24_md"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/URL"
        tools:text="1000" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/repostButton"
        style="@style/Widget.AppTheme.ShareCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkable="false"
        app:layout_constraintStart_toEndOf="@id/likeButton"
        app:layout_constraintTop_toBottomOf="@id/URL"
        tools:text="1000" />

    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:ellipsize="end"
        android:text="@string/loremIpsum"
        app:layout_constraintBottom_toTopOf="@id/URL"
        app:layout_constraintEnd_toEndOf="@id/URL"
        app:layout_constraintStart_toStartOf="@id/URL"
        app:layout_constraintTop_toBottomOf="@id/headerBarrier" />

    <TextView
        android:id="@+id/URL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:singleLine="true"
        android:text="@string/URL"
        android:textColor="#2289F8"
        app:layout_constraintEnd_toEndOf="@id/text"
        app:layout_constraintStart_toStartOf="@id/text"
        app:layout_constraintTop_toBottomOf="@id/text" />

    <ImageView
        android:id="@+id/viewCountPicture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:contentDescription="@string/viewcountpicture"
        android:src="@drawable/ic_views_24dp"
        app:layout_constraintBottom_toBottomOf="@id/repostButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/repostButton" />

    <TextView
        android:id="@+id/viewCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:text="1"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/repostButton"
        app:layout_constraintEnd_toStartOf="@id/viewCountPicture"
        app:layout_constraintTop_toTopOf="@id/likeButton" />

</androidx.constraintlayout.widget.ConstraintLayout>